# firepilot

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  firepilot.yaml  index.html
ci/: README.md
demo/: Dockerfile  demo-validate.sh  docker-compose.yml  example-issue.md
docs/: architecture.md  threat-model.md
mcp-servers/mcp-itsm/: .env.example  README.md  pyproject.toml
mcp-servers/mcp-itsm/src/mcp_itsm/: __init__.py  config.py  formatting.py  github_client.py  logging.py  models.py  server.py
mcp-servers/mcp-itsm/src/mcp_itsm/fixtures/: __init__.py  itsm.py
mcp-servers/mcp-itsm/src/mcp_itsm/tools/: __init__.py  change_requests.py  config_files.py
mcp-servers/mcp-itsm/tests/: __init__.py  conftest.py  test_audit_comments.py  test_change_request_lifecycle.py  test_config_files.py  test_github_client.py  test_live_tools.py
mcp-servers/mcp-strata-cloud-manager/: .env.example  .gitignore  README.md  pyproject.toml
mcp-servers/mcp-strata-cloud-manager/src/mcp_strata_cloud_manager/: __init__.py  config.py  logging.py  models.py  scm_client.py  server.py
mcp-servers/mcp-strata-cloud-manager/src/mcp_strata_cloud_manager/fixtures/: __init__.py  store.py  strata.py
mcp-servers/mcp-strata-cloud-manager/src/mcp_strata_cloud_manager/tools/: __init__.py  operations.py  read.py  write.py
mcp-servers/mcp-strata-cloud-manager/tests/: __init__.py  conftest.py  test_operations_tools.py  test_operations_tools_live.py  test_read_tools.py  test_read_tools_live.py  test_scm_client.py  test_write_tools.py  test_write_tools_live.py
(+109 files in other folders)
